Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int setJointsSoftLimitRange(/*IN[7]*/ double *dblMinPos, /*IN[7]*/ double *dblMaxPos,
                                      /*IN*/ const char *strIpAddress = "");
DIANA_API int setJointImpeda(/*IN[7]*/ double *arrStiff, /*IN*/ double dblDampRatio,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointImpeda(/*OUT[7]*/ double *arrStiff, /*OUT*/ double *dblDampRatio,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int setCartImpeda(/*IN[6]*/ double *arrStiff, /*IN*/ double dblDampRatio,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int getCartImpeda(/*OUT[6]*/ double *arrStiff, /*OUT*/ double *dblDampRatio,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int getFunctionOptI4(/*IN*/ int intFunctionIndex, /*IN*/ int intOptName, /*OUT*/ int *intOptVal,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int setFunctionOptI4(/*IN*/ int intFunctionIndex, /*IN*/ int intOptName, /*IN*/ int intOptVal,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int setThresholdTorque(/*IN[7]*/ double *threshold,
                                 /*IN*/ const char *strIpAddress = "");
DIANA_API int getThresholdTorque(/*OUT[7]*/ double *threshold,
                                 /*IN*/ const char *strIpAddress = "");
DIANA_API int setSafetySpeedLimit(/*IN[7]*/ double *jointSafetySpeedLimit, /*IN[7]*/ double *tcpSafetySpeedLimit,
                                  /*IN*/ const char *strIpAddress = "");
DIANA_API int getSafetySpeedLimit(/*OUT[7]*/ double *jointSafetySpeedLimit, /*OUT[7]*/ double *tcpSafetySpeedLimit,
                                  /*IN*/ const char *strIpAddress = "");