Plugins/org.mitk.lancet.CZXtest/DianaApi/X64/include/DianaApiSpecial.h

DIANA_API int enterRescueMode(const char *strIpAddress = "");
DIANA_API int switchRescueMode(const int scuWorkMode, const char *strIpAddress = "");
DIANA_API int leaveRescueMode(const char *strIpAddress = "");
DIANA_API int getCartImpedanceCoordinateType(const char *strIpAddress = "");
DIANA_API int setCartImpedanceCoordinateType(const int intCoordinateType, const char *strIpAddress = "");
DIANA_API int getJointLockedInCartImpedanceMode(/*OUT*/ bool &isLocked, /*IN*/ const char *strIpAddress = "");
DIANA_API int setJointLockedInCartImpedanceMode(/*IN*/ const bool bLock, /*IN*/ const int intLockedJointIndex = 2,
                                                /*IN*/ const char *strIpAddress = "");
DIANA_API int setHeartbeatParam(/*IN*/ int disconnectTimeout, /*IN*/ int stopRobotTimeout,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int getHeartbeatParam(/*OUT*/ int *disconnectTimeout, /*OUT*/ int *stopRobotTimeout,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int customRobotState(/*IN*/ int action, /*IN*/ unsigned long long customBits,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int getCustomRobotState(/*OUT*/ unsigned long long *customBits, /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpPoseByTcpName(/*IN*/ const char *tcpName, /*OUT[6]*/ double *coordinate,
                                  /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpPoseByWorkPieceName(/*IN*/ const char *workPieceName, /*OUT[6]*/ double *coordinate,
                                        /*IN*/ const char *strIpAddress = "");
DIANA_API int getPayLoadByTcpName(/*IN*/ const char *tcpName, /*OUT[10]*/ double *payload,
                                  /*IN*/ const char *strIpAddress = "");
DIANA_API int setDefaultToolTcpCoordinate(/*IN*/ const char *tcpName, /*IN*/ const char *strIpAddress = "");