Modules/LancetHardwareDevice/DianaApi/Release/DianaApi.py


def setJointsSoftLimitRange(arrMinPos, arrMaxPos, ipAddress = ''):
    jointMin = DIANA_JOINTS_POSITION()
    jointMin.values = (c_double*7)()
    for index in range(0, len(arrMinPos)):
        jointMin.values[index] = arrMinPos[index]
    jointMax = DIANA_JOINTS_POSITION()
    jointMax.values = (c_double*7)()
    for index in range(0, len(arrMaxPos)):
        jointMax.values[index] = arrMaxPos[index]
    api_mod.setJointsSoftLimitRange.argtypes = [POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.setJointsSoftLimitRange.restype = c_int
    ret = api_mod.setJointsSoftLimitRange(jointMin, jointMax, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getFunctionOptI4(funtion_index:function_index_e, opt_name:function_opt_name_e, ipAddress=''):
    opt_value = c_int()
    api_mod.getFunctionOptI4.argtypes = [c_int, c_int, POINTER(c_int), c_char_p]
    api_mod.getFunctionOptI4.restype = c_int
    ret = api_mod.getFunctionOptI4(funtion_index.value, opt_name.value, byref(opt_value), bytes(ipAddress.encode('utf-8')))
    if ret == 0:
        return True, opt_value.value
    else:
        return False, 0

def setFunctionOptI4(funtion_index:function_index_e, opt_name:function_opt_name_e, opt_value, ipAddress=''):
    api_mod.setFunctionOptI4.argtypes = [c_int, c_int, c_int, c_char_p]
    api_mod.setFunctionOptI4.restype = c_int
    ret = api_mod.setFunctionOptI4(funtion_index.value, opt_name.value, opt_value, bytes(ipAddress.encode('utf-8')))
    if ret == 0:
        return True
    else:
        return False

def enterRescueMode(ipAddress=''):
    api_mod.enterRescueMode.argtypes = [c_char_p]
    api_mod.enterRescueMode.restype = c_int
    ret = api_mod.enterRescueMode(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def switchRescueMode(scuWorkMode, ipAddress=''):
    api_mod.switchRescueMode.argtypes = [c_int, c_char_p]
    api_mod.switchRescueMode.restype = c_int
    ret = api_mod.switchRescueMode(scuWorkMode, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def leaveRescueMode(ipAddress=''):
    api_mod.leaveRescueMode.argtypes = [c_char_p]
    api_mod.leaveRescueMode.restype = c_int
    ret = api_mod.leaveRescueMode(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getCartImpedanceCoordinateType(ipAddress=''):
    api_mod.getCartImpedanceCoordinateType.argtypes = [c_char_p]
    api_mod.getCartImpedanceCoordinateType.restype = c_int
    ret = api_mod.getCartImpedanceCoordinateType(bytes(ipAddress.encode('utf-8')))
    return ret

def setCartImpedanceCoordinateType(type, ipAddress=''):
    api_mod.setCartImpedanceCoordinateType.argtypes = [c_int, c_char_p]
    api_mod.setCartImpedanceCoordinateType.restype = c_int
    ret = api_mod.setCartImpedanceCoordinateType(type, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getJointLockedInCartImpedanceMode(ipAddress=''):
    isLocked = c_bool()
    api_mod.getJointLockedInCartImpedanceMode.argtypes = [POINTER(c_bool), c_char_p]
    api_mod.getJointLockedInCartImpedanceMode.restype = c_int
    ret = api_mod.getJointLockedInCartImpedanceMode(byref(isLocked), bytes(ipAddress.encode('utf-8')))
    return message(ret),isLocked.value

def setJointLockedInCartImpedanceMode(islocked, lockIndex=2, ipAddress=''):
    api_mod.setJointLockedInCartImpedanceMode.argtypes = [c_bool, c_int, c_char_p]
    api_mod.setJointLockedInCartImpedanceMode.restype = c_int
    ret = api_mod.setJointLockedInCartImpedanceMode(islocked, lockIndex, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setJointImpeda(arrStiff, arrDampRatio, ipAddress=''):
    jointStiff = DIANA_JOINT_STIFF()
    jointStiff.values = (c_double*7)()
    for index in range(0, len(arrStiff)):
        jointStiff.values[index] = arrStiff[index]
    api_mod.setJointImpeda.argtypes = [
        POINTER(DIANA_JOINT_STIFF), c_double, c_char_p]
    api_mod.setJointImpeda.restype = c_int
    ret = api_mod.setJointImpeda(
        jointStiff, arrDampRatio[0], bytes(ipAddress.encode('utf-8')))
    return message(ret)


def getJointImpeda(arrStiff, arrDampRatio, ipAddress=''):
    jointStiff = DIANA_JOINT_STIFF()
    jointStiff.values = (c_double*7)()
    jointDampRatio = c_double()
    api_mod.getJointImpeda.argtypes = [
        POINTER(DIANA_JOINT_STIFF), POINTER(c_double), c_char_p]
    api_mod.getJointImpeda.restype = c_int
    ret = api_mod.getJointImpeda(byref(jointStiff), byref(
        jointDampRatio), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrStiff)):
        arrStiff[index] = jointStiff.values[index]
    arrDampRatio[0] = jointDampRatio.value
    return message(ret)

def setCartImpeda(arrStiff, arrDampRatio, ipAddress=''):
    cartStiff = DIANA_CART_STIFF()
    cartStiff.values = (c_double*6)()
    for index in range(0, len(cartStiff.values)):
        cartStiff.values[index] = arrStiff[index]
    api_mod.setCartImpeda.argtypes = [
        POINTER(DIANA_CART_STIFF), c_double, c_char_p]
    api_mod.setCartImpeda.restype = c_int
    ret = api_mod.setCartImpeda(
        cartStiff, arrDampRatio[0], bytes(ipAddress.encode('utf-8')))
    return message(ret)


def getCartImpeda(arrStiff, arrDampRatio, ipAddress=''):
    cartStiff = DIANA_CART_STIFF()
    cartStiff.values = (c_double*6)()
    cartDampRatio = c_double()
    api_mod.getCartImpeda.argtypes = [
        POINTER(DIANA_CART_STIFF), POINTER(c_double), c_char_p]
    api_mod.getCartImpeda.restype = c_int
    ret = api_mod.getCartImpeda(byref(cartStiff), byref(
        cartDampRatio), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(cartStiff.values)):
        arrStiff[index] = cartStiff.values[index]
    arrDampRatio[0] = cartDampRatio.value
    return message(ret)

def setThresholdTorque(arrthreshold, ipAddress=''):
    threshold = DIANA_THRESHOLD_TORQUE()
    threshold.values = (c_double*7)()
    for index in range(0, len(threshold.values)):
        threshold.values[index] = arrthreshold[index]
    api_mod.setThresholdTorque.argtypes = [
        POINTER(DIANA_THRESHOLD_TORQUE), c_char_p]
    api_mod.setThresholdTorque.restype = c_int
    ret = api_mod.setThresholdTorque(
        threshold, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def getThresholdTorque(arrthreshold, ipAddress=''):
    threshold = DIANA_THRESHOLD_TORQUE()
    threshold.values = (c_double*7)()
    api_mod.getThresholdTorque.argtypes = [
        POINTER(DIANA_THRESHOLD_TORQUE), c_char_p]
    api_mod.getThresholdTorque.restype = c_int
    ret = api_mod.getThresholdTorque(byref(threshold), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(threshold.values)):
        arrthreshold[index] = threshold.values[index]
    return message(ret)

def setSafetySpeedLimit(arrJointSafetySpeedLimit, arrCartSafetySpeedLimit,ipAddress=''):
    jointSafetySpeedLimit = DIANA_JOINT_SAFETY_SPEED_LIMIT()
    jointSafetySpeedLimit.values = (c_double*7)()
    for index in range(0, len(jointSafetySpeedLimit.values)):
        jointSafetySpeedLimit.values[index] = arrJointSafetySpeedLimit[index]
    cartSafetySpeedLimit = DIANA_CART_SAFETY_SPEED_LIMIT()
    cartSafetySpeedLimit.values = (c_double*6)()
    for index in range(0, len(cartSafetySpeedLimit.values)):
        cartSafetySpeedLimit.values[index] = arrCartSafetySpeedLimit[index]
    api_mod.setSafetySpeedLimit.argtypes = [
        POINTER(DIANA_JOINT_SAFETY_SPEED_LIMIT),  POINTER(DIANA_CART_SAFETY_SPEED_LIMIT), c_char_p]
    api_mod.setSafetySpeedLimit.restype = c_int
    ret = api_mod.setSafetySpeedLimit(
        jointSafetySpeedLimit, cartSafetySpeedLimit,bytes(ipAddress.encode('utf-8')))
    return message(ret)


def getSafetySpeedLimit(arrJointSafetySpeedLimit, arrCartSafetySpeedLimit,ipAddress=''):
    jointSafetySpeedLimit = DIANA_JOINT_SAFETY_SPEED_LIMIT()
    jointSafetySpeedLimit.values = (c_double*7)()
    cartSafetySpeedLimit = DIANA_CART_SAFETY_SPEED_LIMIT()
    cartSafetySpeedLimit.values = (c_double*6)()
    api_mod.getSafetySpeedLimit.argtypes = [
        POINTER(DIANA_JOINT_SAFETY_SPEED_LIMIT),  POINTER(DIANA_CART_SAFETY_SPEED_LIMIT), c_char_p]
    api_mod.getSafetySpeedLimit.restype = c_int
    ret = api_mod.getSafetySpeedLimit(byref(jointSafetySpeedLimit),byref(cartSafetySpeedLimit), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(jointSafetySpeedLimit.values)):
        arrJointSafetySpeedLimit[index] = jointSafetySpeedLimit.values[index]
    for index in range(0, len(cartSafetySpeedLimit.values)):
        arrCartSafetySpeedLimit[index] = cartSafetySpeedLimit.values[index]
    return message(ret)

def setHeartbeatParam(disconnectTimeout, stopRobotTimeout, ipAddress=''):
    api_mod.setHeartbeatParam.argtypes = [c_int, c_int, c_char_p]
    api_mod.setHeartbeatParam.restype = c_int
    ret = api_mod.setHeartbeatParam(disconnectTimeout, stopRobotTimeout, bytes(ipAddress.encode('utf-8')))
    return ret

def getHeartbeatParam(disconnectTimeout, stopRobotTimeout, ipAddress=''):
    api_mod.getHeartbeatParam.argtypes = [POINTER(c_int), POINTER(c_int), c_char_p]
    api_mod.getHeartbeatParam.restype = c_int
    ret = api_mod.getHeartbeatParam(byref(disconnectTimeout), byref(stopRobotTimeout), bytes(ipAddress.encode('utf-8')))
    return ret

def customRobotState(action, customBits, ipAddress=''):
    api_mod.customRobotState.argtypes = [c_int, c_ulonglong, c_char_p]
    api_mod.customRobotState.restype = c_int
    ret = api_mod.customRobotState(action, customBits, bytes(ipAddress.encode('utf-8')))
    return ret

def getCustomRobotState(customBits, ipAddress=''):
    api_mod.getCustomRobotState.argtypes = [POINTER(c_ulonglong), c_char_p]
    api_mod.getCustomRobotState.restype = c_int
    ret = api_mod.getCustomRobotState(byref(customBits), bytes(ipAddress.encode('utf-8')))
    return ret

############### 设置/获取坐标系 ###############################
def getTcpPosByTcpName(tcpName, arrPose, ipAddress=''):
    pose = DIANA_TCP_POSE()
    pose.values = (c_double*6)()
    api_mod.getTcpPoseByTcpName.argtypes = [c_char_p, POINTER(DIANA_TCP_POSE), c_char_p]
    api_mod.getTcpPoseByTcpName.restype = c_int
    ret = api_mod.getTcpPoseByTcpName(bytes(tcpName.encode('utf-8')), pose, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(pose.values)):
        arrPose[index] = pose.values[index]
    return message(ret)


def getTcpPoseByWorkPieceName(workPieceName, arrPose, ipAddress=''):
    pose = DIANA_TCP_POSE()
    pose.values = (c_double*6)()
    api_mod.getTcpPoseByWorkPieceName.argtypes = [c_char_p, POINTER(DIANA_TCP_POSE), c_char_p]
    api_mod.getTcpPoseByWorkPieceName.restype = c_int
    ret = api_mod.getTcpPoseByWorkPieceName(bytes(workPieceName.encode('utf-8')), pose, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(pose.values)):
        arrPose[index] = pose.values[index]
    return message(ret)


def getPayLoadByTcpName(tcpName, payload, ipAddress=''):
    tcpPayload = DIANA_TCP_PAYLOAD()
    tcpPayload.values = (c_double*10)()
    api_mod.getPayLoadByTcpName.argtypes = [c_char_p, POINTER(DIANA_TCP_PAYLOAD), c_char_p]
    api_mod.getPayLoadByTcpName.restype = c_int
    ret = api_mod.getPayLoadByTcpName(bytes(tcpName.encode('utf-8')), tcpPayload, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(tcpPayload.values)):
        payload[index] = tcpPayload.values[index]
    return message(ret)


def setDefaultToolTcpCoordinate(tcpName, ipAddress=''):
    api_mod.setDefaultToolTcpCoordinate.argtypes = [c_char_p, c_char_p]
    api_mod.setDefaultToolTcpCoordinate.restype = c_int
    ret = api_mod.setDefaultToolTcpCoordinate(bytes(tcpName.encode('utf-8')), bytes(ipAddress.encode('utf-8')))
    return message(ret)

